WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281685
[scroll-animations] WPT test `scroll-animations/scroll-timelines/finish-animation.html` is a crash
https://bugs.webkit.org/show_bug.cgi?id=281685
Summary
[scroll-animations] WPT test `scroll-animations/scroll-timelines/finish-anima...
Antoine Quint
Reported
2024-10-17 12:41:26 PDT
The WPT test `scroll-animations/scroll-timelines/finish-animation.html` crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-17 12:41:36 PDT
<
rdar://problem/138136777
>
Antoine Quint
Comment 2
2024-10-17 12:49:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35377
EWS
Comment 3
2024-10-18 00:12:57 PDT
Committed
285380@main
(e6cfe3934287): <
https://commits.webkit.org/285380@main
> Reviewed commits have been landed. Closing PR #35377 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug