[scroll-animations] WPT test `scroll-animations/scroll-timelines/finish-animation.html` is a crash https://bugs.webkit.org/show_bug.cgi?id=281685 rdar://138136777

Reviewed by Dean Jackson, Matt Woodrow, and Ryosuke Niwa.

Fix three issues that caused assertion failures in `scroll-animations/scroll-timelines/finish-animation.html`:

1. a mistaken assertion in `AnimationEffectTiming::getBasicTiming()`,
2. incompatible time operations with the epsilon value,
3. incompatible time operations with the 0 value.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/finish-animation-expected.txt:
* Source/WebCore/animation/AnimationEffectTiming.cpp:
(WebCore::AnimationEffectTiming::getBasicTiming const): We incorrectly asserted that `timelineTime` would always
be resolved, but this is only expected if `startTime` also is.
* Source/WebCore/animation/CSSNumberishTime.cpp:
(WebCore::CSSNumberishTime::matchingEpsilon const): Introduce a new method to get the matching epsilon value
for a given time value such that an operation between the two can be safely conducted.
* Source/WebCore/animation/CSSNumberishTime.h:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::playState const):
(WebCore::WebAnimation::zeroTime const): Ensure we return a percentage 0 value not only if the animation is
associated with a progress-based timeline, but also if we have a percentage value for the start time or the
hold time.
(WebCore::WebAnimation::play):
(WebCore::WebAnimation::timeEpsilon const): Deleted.
* Source/WebCore/animation/WebAnimation.h:

Canonical link: https://commits.webkit.org/285380@main